package com.andresgt.notifications.abstraction;

public interface Notification {
    void send(String message);
}
