package com.andresgt.notifications.platform;

public interface NotificationPlatform {
    void show(String title, String body);
}
